# bottomfeeder

./: .gitignore  Dockerfile  README.md  data.db  entrypoint.sh  feeds.opml  jinja_extensions.py  main.py  pyproject.toml  test.py
alembic/: env.py
alembic/versions/: 15c5fb2a1b7b_initial_setup.py  2359972e2837_add_sessions.py  4d8f7ae8c980_add_latest_entry_date_to_feed.py  4f40d6968a24_add_unique_constraint_to_email_and_.py  d38cf7e37f36_add_filter_fields.py
config/: db.py  settings.py
exceptions/: handlers.py
models/: Account.py  AccountSession.py  Entry.py  Feed.py  __init__.py
models/requests/: CreateEntryRequest.py  CreateFeedRequest.py  RegisterRequest.py
repositories/: EntryRepository.py  FeedRepository.py
routers/: AccountRouter.py  EntryRouter.py  FeedRouter.py  LapRouter.py  WebRouter.py
services/: AccountService.py  EntryService.py  FeedService.py  RssService.py
src/: main.py
src/config/: db.py  jwt.py  settings.py
src/exceptions/: handlers.py
src/models/: Account.py  AccountSession.py  Entry.py  Feed.py  Pagination.py  Token.py  __init__.py
src/repositories/: AccountRepository.py  EntryRepository.py  FeedRepository.py  SessionRepository.py
src/routers/: EntryRouter.py  WebRouter.py
src/services/: AccountService.py  FeedService.py  RssService.py
src/static/: styles.css
src/templates/: 404.html  add_feed.html  delete-feed.html  feed.html  (+3 more)
static/: styles.css
templates/: 500.html  add_feed.html  entries.html  entry.html  feed.html  feeds.html  import_feeds.html  layout.html  login.html  register.html  update_feed.html
(+4 files in other folders)
